--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         /* Profile Picture Frame */
         .profile-frame {
-            position: fixed;
+            position: absolute;
             top: 180px;
             right: 64px;
             width: 180px;
@@ -190,6 +190,8 @@
             transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
             z-index: 101;
             flex-shrink: 0;
+            margin: 0;
+            padding: 0;
         }
 
         [data-theme="dark"] .theme-toggle {
@@ -243,7 +245,7 @@
             position: relative;
             max-width: 1080px;
             margin: 0 auto;
-            padding: 24px 64px 96px 120px;
+            padding: 180px 64px 96px 120px;
             z-index: 1;
         }
 
@@ -1277,17 +1279,14 @@
 
         /* Responsive */
         @media (max-width: 1024px) {
+            .container {
+                padding-top: 120px;
+            }
+
             .profile-frame {
                 width: 140px;
                 height: 140px;
-                top: 80px;
-                right: 48px;
-            }
-
-            .theme-toggle {
-                width: 48px;
-                height: 48px;
-                top: 24px;
+                top: 120px;
                 right: 48px;
             }
         }
@@ -1298,13 +1297,14 @@
             }
 
             .container {
-                padding: 72px 32px 72px 56px;
+                padding: 80px 32px 72px 56px;
             }
 
             .profile-frame {
+                position: absolute;
                 width: 110px;
                 height: 110px;
-                top: 24px;
+                top: 80px;
                 right: 32px;
             }
 
@@ -1391,13 +1391,14 @@
 
         @media (max-width: 480px) {
             .container {
-                padding: 56px 24px 56px 40px;
+                padding: 64px 24px 56px 40px;
             }
 
             .profile-frame {
+                position: absolute;
                 width: 80px;
                 height: 80px;
-                top: 20px;
+                top: 64px;
                 right: 24px;
             }
 
@@ -1508,9 +1509,10 @@
             }
 
             .profile-frame {
+                position: absolute;
                 width: 64px;
                 height: 64px;
-                top: 16px;
+                top: 64px;
                 right: 16px;
             }
         }
