--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
             transition: background 0.4s cubic-bezier(0.16, 1, 0.3, 1), color 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
+        [data-theme="dark"] body {
+            animation: themeFade 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        @keyframes themeFade {
+            0% {
+                background: var(--surface-elevated);
+                /* Slightly lighter dark to transition */
+                opacity: 0.9;
+            }
+
+            100% {
+                background: var(--bg);
+                opacity: 1;
+            }
+        }
+
         /* Notepad grid background with left margin line */
         .notepad-bg {
             position: fixed;
@@ -95,6 +112,7 @@
             background: var(--surface);
             padding: 0;
             z-index: 100;
+            border-radius: 16px;
             transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
             animation: fadeSlideDown 1s cubic-bezier(0.16, 1, 0.3, 1) 0.3s backwards;
             box-shadow:
@@ -141,10 +159,10 @@
 
         .profile-doodle-svg {
             position: absolute;
-            top: -16px;
-            left: -16px;
-            width: calc(100% + 32px);
-            height: calc(100% + 32px);
+            top: -9%;
+            left: -9%;
+            width: 118%;
+            height: 118%;
             z-index: 101;
             pointer-events: none;
             overflow: visible;
@@ -158,13 +176,25 @@
             stroke-linejoin: round;
             stroke-dasharray: 100;
             stroke-dashoffset: 100;
-            animation: drawProfileFrame 1.5s ease-out forwards;
+            animation: drawEraseDraw 6s ease-in-out infinite;
             animation-delay: 0.5s;
         }
 
-        @keyframes drawProfileFrame {
-            to {
+        @keyframes drawEraseDraw {
+
+            0%,
+            10% {
+                stroke-dashoffset: 100;
+            }
+
+            45%,
+            55% {
                 stroke-dashoffset: 0;
+            }
+
+            90%,
+            100% {
+                stroke-dashoffset: -100;
             }
         }
 
@@ -1353,10 +1383,11 @@
 
         /* Contact */
         .connect-panel {
+            flex: 1;
+            min-width: 250px;
             display: grid;
             gap: 12px;
             max-width: 560px;
-            margin-top: 8px;
             padding: 24px;
             border: 1px solid var(--border);
             border-radius: 16px;
@@ -1440,8 +1471,11 @@
             color: #ffffff;
             width: fit-content;
             gap: 8px;
-            padding: 12px 16px;
+            padding: 16px 24px;
+            border-radius: 16px;
             box-shadow: 0 6px 18px rgba(0, 0, 0, 0.18);
+            height: 100%;
+            font-size: 14px;
         }
 
         [data-theme="dark"] .x-connect-btn {
@@ -1451,8 +1485,8 @@
         }
 
         .x-connect-icon {
-            width: 14px;
-            height: 14px;
+            width: 18px;
+            height: 18px;
             fill: currentColor;
             flex-shrink: 0;
             display: block;
@@ -1463,8 +1497,19 @@
             filter: brightness(0.95);
         }
 
+        .contact-methods {
+            display: flex;
+            flex-direction: column;
+            ;
+            gap: 16px;
+            align-items: stretch;
+            margin-top: 32px;
+        }
+
         .connect-secondary {
-            margin-top: 12px;
+            display: flex;
+            flex-direction: column;
+            margin-top: 0;
         }
 
         /* Footer */
@@ -1777,6 +1822,21 @@
                 right: 8px;
             }
 
+            .star-1 {
+                width: 20px;
+                height: 20px;
+            }
+
+            .star-2 {
+                width: 14px;
+                height: 14px;
+            }
+
+            .star-3 {
+                width: 18px;
+                height: 18px;
+            }
+
             h1 {
                 font-size: 48px;
                 max-width: calc(100% - 130px);
@@ -1826,8 +1886,14 @@
                 flex-direction: column;
             }
 
+            .contact-methods {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
             .x-connect-btn {
                 padding: 14px 16px;
+                width: 100%;
             }
 
             .skill-item {
@@ -2326,26 +2392,28 @@
 
             <h2>Let's build something together</h2>
 
-            <div class="connect-panel">
-                <label class="connect-label" for="connectEmail">Email</label>
-                <div class="connect-row">
-                    <input id="connectEmail" class="connect-email-input" type="email" name="email"
-                        placeholder="you@example.com" autocomplete="email">
-                    <a id="connectEmailBtn" href="mailto:alihusain.or@gmail.com?subject=Let%27s%20Connect"
-                        class="connect-btn">
-                        Connect
+            <div class="contact-methods">
+                <div class="connect-panel">
+                    <label class="connect-label" for="connectEmail">Email</label>
+                    <form class="connect-row" action="https://formsubmit.co/alihusain.or@gmail.com" method="POST">
+                        <input type="hidden" name="_subject" value="New connection from Portfolio">
+                        <input id="connectEmail" class="connect-email-input" type="email" name="email"
+                            placeholder="you@example.com" autocomplete="email" required>
+                        <button type="submit" id="connectEmailBtn" class="connect-btn">
+                            Connect
+                        </button>
+                    </form>
+                </div>
+                <div class="connect-secondary">
+                    <a href="https://x.com/alivldm" class="x-connect-btn" target="_blank" rel="noopener noreferrer">
+                        <svg class="x-connect-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true">
+                            <path
+                                d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                        </svg>
+                        <span>Let's Connect</span>
                     </a>
                 </div>
-            </div>
-            <div class="connect-secondary">
-                <a href="https://x.com/alivldm" class="x-connect-btn" target="_blank" rel="noopener noreferrer">
-                    <svg class="x-connect-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true">
-                        <path
-                            d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
-                    </svg>
-                    <span>Let's Connect</span>
-                </a>
             </div>
         </section>
 
@@ -2438,66 +2506,7 @@
             const themeToggle = document.getElementById('themeToggle');
             const html = document.documentElement;
 
-            // Contact email connect button
-            const connectEmailInput = document.getElementById('connectEmail');
-            const connectEmailBtn = document.getElementById('connectEmailBtn');
-
-            if (connectEmailInput && connectEmailBtn) {
-                const ownerEmail = 'alihusain.or@gmail.com';
-                const subject = "Let's Connect";
-                const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-                const buildMailtoHref = (senderEmail) => {
-                    const bodyLines = [
-                        'Hi Ali,',
-                        '',
-                        "I'd like to connect regarding your work.",
-                        senderEmail ? `My email: ${senderEmail}` : '',
-                        '',
-                        'Sent from your portfolio contact section.'
-                    ].filter(Boolean);
-
-                    return `mailto:${ownerEmail}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(bodyLines.join('\n'))}`;
-                };
-
-                const syncConnectLink = () => {
-                    const senderEmail = connectEmailInput.value.trim();
-                    if (!senderEmail) {
-                        connectEmailInput.setCustomValidity('');
-                        connectEmailBtn.setAttribute('href', buildMailtoHref(''));
-                        return true;
-                    }
-
-                    const isValidEmail = emailPattern.test(senderEmail);
-                    connectEmailInput.setCustomValidity(isValidEmail ? '' : 'Enter a valid email address.');
-
-                    if (isValidEmail) {
-                        connectEmailBtn.setAttribute('href', buildMailtoHref(senderEmail));
-                    }
-
-                    return isValidEmail;
-                };
-
-                syncConnectLink();
-
-                connectEmailInput.addEventListener('input', syncConnectLink);
-
-                connectEmailInput.addEventListener('keydown', (event) => {
-                    if (event.key === 'Enter') {
-                        event.preventDefault();
-                        connectEmailBtn.click();
-                    }
-                });
-
-                connectEmailBtn.addEventListener('click', (event) => {
-                    const isValid = syncConnectLink();
-                    if (!isValid) {
-                        event.preventDefault();
-                        connectEmailInput.reportValidity();
-                        connectEmailInput.focus();
-                    }
-                });
-            }
+            // Removed unused contact email JS since formsubmit handles it now
 
             // Check for saved theme preference or default to light mode
             const savedTheme = localStorage.getItem('theme') || 'light';
@@ -2519,11 +2528,11 @@
 
             function handleNavScroll() {
                 const currentScrollY = window.scrollY;
-                if (currentScrollY > lastScrollY && currentScrollY > 200) {
-                    // Scrolling down - hide nav
+                if (currentScrollY < lastScrollY && currentScrollY > 200) {
+                    // Scrolling up - hide nav
                     bottomNav.classList.add('nav-hidden');
                 } else {
-                    // Scrolling up - show nav
+                    // Scrolling down or top - show nav
                     bottomNav.classList.remove('nav-hidden');
                 }
                 lastScrollY = currentScrollY;
