--- a/index.html
+++ b/index.html
@@ -2125,7 +2125,7 @@
             </div>
 
             <div class="projects-grid">
-                <a class="project-card project-card--wip" href="https://crossbits.pro" target="_blank"
+                <a class="project-card project-card--wip" target="_blank"
                     rel="noopener noreferrer">
                     <img src="crossbits.png" alt="Crossbits preview" class="project-preview">
                     <div class="project-header">
@@ -2146,7 +2146,7 @@
                     </div>
                 </a>
 
-                <a class="project-card project-card--wip" href="https://deadroute.vercel.app" target="_blank"
+                <a class="project-card project-card--wip" target="_blank"
                     rel="noopener noreferrer">
                     <img src="deadroute.png" alt="SaaS Dashboard preview" class="project-preview">
                     <div class="project-header">
@@ -2168,7 +2168,7 @@
                     </div>
                 </a>
 
-                <a class="project-card" href="https://example.com/cms" target="_blank" rel="noopener noreferrer">
+                <a class="project-card" target="_blank" rel="noopener noreferrer">
                     <img src="datalytics.png" alt="Portfolio CMS preview" class="project-preview">
                     <div class="project-header">
                         <h3 class="project-title">Datalytics</h3>
@@ -2185,7 +2185,7 @@
                     </div>
                 </a>
 
-                <a class="project-card" href="https://example.com/landing" target="_blank" rel="noopener noreferrer">
+                <a class="project-card" target="_blank" rel="noopener noreferrer">
                     <img src="glyphforge.png" alt="Mobile App Landing preview" class="project-preview">
                     <div class="project-header">
                         <h3 class="project-title">GlyphForge</h3>
