--- a/index.html
+++ b/index.html
@@ -503,37 +503,19 @@
                 opacity: 0;
             }
 
-            5%,
-            25% {
+            20% {
                 stroke-dashoffset: 0;
                 opacity: 1;
             }
 
-            35%,
-            45% {
-                stroke-dashoffset: -100;
-                opacity: 1;
-            }
-
-            46% {
-                stroke-dashoffset: -100;
-                opacity: 0;
-            }
-
-            47% {
-                stroke-dashoffset: 100;
-                opacity: 0;
-            }
-
-            55%,
-            85% {
+            80% {
                 stroke-dashoffset: 0;
                 opacity: 1;
             }
 
             100% {
                 stroke-dashoffset: -100;
-                opacity: 1;
+                opacity: 0;
             }
         }
 
@@ -1462,13 +1444,13 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            padding: 0 18px;
+            padding: 14px 24px;
             border-radius: 12px;
             border: 1.5px solid var(--accent);
             text-decoration: none;
             white-space: nowrap;
             font-family: 'Geist Mono', monospace;
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 600;
             letter-spacing: 0.4px;
             text-transform: uppercase;
@@ -1476,6 +1458,7 @@
                 border-color 0.3s cubic-bezier(0.16, 1, 0.3, 1),
                 background 0.3s cubic-bezier(0.16, 1, 0.3, 1),
                 color 0.3s cubic-bezier(0.16, 1, 0.3, 1),
+                box-shadow 0.3s cubic-bezier(0.16, 1, 0.3, 1),
                 opacity 0.3s cubic-bezier(0.16, 1, 0.3, 1);
             background: var(--accent);
             color: var(--bg);
@@ -1483,7 +1466,22 @@
 
         .connect-btn:hover {
             transform: translateY(-2px);
-            filter: brightness(0.95);
+            opacity: 0.9;
+        }
+
+        [data-theme="dark"] .connect-btn {
+            background: rgba(255, 255, 255, 0.05);
+            color: var(--text-primary);
+            border-color: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        [data-theme="dark"] .connect-btn:hover {
+            background: rgba(255, 255, 255, 1);
+            color: #000;
+            border-color: rgba(255, 255, 255, 1);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2), 0 8px 16px rgba(0, 0, 0, 0.6);
+            opacity: 1;
         }
 
         .x-connect-btn {
