--- a/index.html
+++ b/index.html
@@ -2564,18 +2564,10 @@
                         </button>
                 </div>
             </div>
-        </section>
 
-        <footer>
-            <div>
-                <p>&copy; 2026 Made By Ali</p>
-                <div class="footer-links" style="margin-top: 16px;">
-                    <a href="#work">Work</a>
-                    <a href="#skills">Skills</a>
-                    <a href="#contact">Contact</a>
-                </div>
-            </div>
-            <div class="footer-connect">
+            <div style="padding-top: 20px; ">
+                <div>
+                    <div class="footer-connect">
                 <a href="https://x.com/alivldm" class="x-connect-btn" target="_blank" rel="noopener noreferrer">
                     <div class="x-connect-bg"></div>
                     <div class="x-connect-glow"></div>
@@ -2591,6 +2583,21 @@
                     </div>
                 </a>
             </div>
+                </div>
+            </div>
+        </section>
+        
+
+        <footer>
+            <div>
+                <p>&copy; 2026 Made By Ali</p>
+                <div class="footer-links" style="margin-top: 16px;">
+                    <a href="#work">Work</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </div>
+            
         </footer>
     </div>
 
