--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@
                 <p><strong> Full-stack web developer & freelancer</strong>
                     I build web apps that actually slap.
                     Specialized in the React ecosystem, I handle the entire pipeline. From complex backend logic to
-                    hyper-clean, intuitive Ul.
+                    hyper clean, intuitive Ul.
                     When I'm not helping clients secure absolute Wins on their projects, I'm busy cooking up my own.</p>
             </div>
         </header>
