--- a/index.html
+++ b/index.html
@@ -2271,7 +2271,7 @@
             </div>
 
             <div class="projects-grid">
-                <a href="#" class="project-card project-card--wip" target="_blank" rel="noopener noreferrer">
+                <a  class="project-card project-card--wip" target="_blank" rel="noopener noreferrer">
                     <img src="crossbits.png" alt="Crossbits preview" class="project-preview">
                     <div class="project-header">
                         <h3 class="project-title">Cross Bits</h3>
@@ -2292,7 +2292,7 @@
                     </div>
                 </a>
 
-                <a href="#" class="project-card project-card--wip" target="_blank" rel="noopener noreferrer">
+                <a class="project-card project-card--wip" target="_blank" rel="noopener noreferrer">
                     <img src="deadroute.png" alt="SaaS Dashboard preview" class="project-preview">
                     <div class="project-header">
                         <h3 class="project-title">Dead Route</h3>
